fix: fix profile job overflow

--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,5 +1,5 @@
 .profile__job {
-  width: 100%;
+  max-width: 203px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
